Your commit message describing the update

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Responsive Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- Section 1: Navbar and Hero Section -->
     <div class="sectionOne">
         <div class="navbar">
             <ul>
@@ -19,41 +20,39 @@
             <h1>Landing</h1>
             <button>Buy Now</button>
         </div>
-        <!-- herosection -->
+        <!-- Hero Section -->
         <div class="main">
             <div class="left">
-                <h1>Introduce Your Product <br> Quickely & Effectily</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit iusto voluptates nulla qui officiis
-                    delectus, nobis ab quam soluta suscipit.</p>
+                <h1>Introduce Your Product <br> Quickly & Effectively</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit iusto voluptates nulla qui officiis delectus, nobis ab quam soluta suscipit.</p>
                 <div class="btns">
                     <button>Purchase UI Kit</button>
                     <button class="btn">Learn More</button>
                 </div>
             </div>
-            <img src="./designer_1.png" alt="error">
+            <img class="hero-image" src="./designer_1.png" alt="Product Image">
         </div>
     </div>
-    <!-- section 2 -->
+
+    <!-- Section 2: Features Section -->
     <div class="sectionTwo">
         <div class="leftside">
-            <h1>light Fast & PowerFull</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit iusto voluptates nulla qui officiis
-                delectus, nobis ab quam soluta suscipit.</p>
+            <h1>Light, Fast & Powerful</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit iusto voluptates nulla qui officiis delectus, nobis ab quam soluta suscipit.</p>
             <div class="icons">
-                <div class="lefticon">
-                    <img src="./Left.png" alt="erorr">
+                <div class="icon-block">
+                    <img src="./Left.png" alt="Icon">
                     <h3>Title Goes Here</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, nihil?</p>
                 </div>
-                <div class="righticon">
-                    <img src="./Left.png" alt="erorr">
+                <div class="icon-block">
+                    <img src="./Left.png" alt="Icon">
                     <h3>Title Goes Here</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, nihil?</p>
                 </div>
             </div>
-
         </div>
-        <img src="./undraw_mobile_login_ikmv.png" alt="error">
+        <img class="feature-image" src="./undraw_mobile_login_ikmv.png" alt="Mobile Login Illustration">
     </div>
 </body>
 
